--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "native-base": "^2.3.9",
+    "prop-types": "^15.6.1",
     "react": "16.2.0",
     "react-native": "0.52.2",
+    "react-native-button": "^2.3.0",
+    "react-native-drawer": "^2.5.0",
     "react-native-modal-filter-picker": "^1.3.2",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-redux": "^5.0.6",
